--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "react-spinners": "^0.5.3",
     "typescript": "3.3.4000"
   },
   "scripts": {
