--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@types/jest": "24.0.11",
     "@types/node": "11.11.4",
+    "@types/qrcode.react": "^0.8.2",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
     "axios": "^0.18.0",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-icons": "^3.5.0",
